--- a/sdks/rust/Cargo.toml
+++ b/sdks/rust/Cargo.toml
@@ -47,6 +47,7 @@ prost-types = "0.11"
 rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_traitobject = "0.2.8"
 serde_yaml = "0.9.14"
 strum_macros = "0.24"
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
