--- a/examples/java/build.gradle
+++ b/examples/java/build.gradle
@@ -81,7 +81,7 @@ dependencies {
   implementation library.java.slf4j_api
   implementation library.java.commons_io
   implementation library.java.commons_csv
-  runtimeOnly project(path: ":runners:direct-java", configuration: "shadow")
+  implementation project(path: ":runners:direct-java")
   implementation project(path: ":runners:portability:java")
   implementation library.java.vendored_grpc_1_54_0
   implementation library.java.vendored_guava_26_0_jre
@@ -96,7 +96,6 @@ dependencies {
   implementation "org.apache.httpcomponents:httpcore:4.4.13"
   implementation "com.fasterxml.jackson.core:jackson-annotations:2.14.1"
   implementation "com.fasterxml.jackson.core:jackson-core:2.14.1"
-  testImplementation project(path: ":runners:direct-java", configuration: "shadow")
   testImplementation project(":sdks:java:io:google-cloud-platform")
   testImplementation project(":sdks:java:extensions:ml")
   testImplementation library.java.google_cloud_bigquery
